<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimesApp</string>
    <string name="action_settings">Settings</string>
    
    <string name="login">LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="timer">Timer</string>
    <string name="activity">Activity</string>
    <string name="note">Note</string>
    <string name="project">Project</string>
    <string name="billed">Billed</string>
    <string name="btn_save">Save Changes</string>
    <string name="settings">Settings</string>

</resources>
