<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="Dexter Morgan"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_timer"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_tab"
            android:textColor="@color/gray"
            android:text="@string/timer"
            android:onClick="actions"
            android:tag="0" />

        <Button
            android:id="@+id/btn_activity"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_tab_inactive"
            android:textColor="@color/darkText"
            android:text="@string/activity"
            android:onClick="actions"
            android:tag="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="85dp"
        android:text=""
        android:textColor="@color/gray"
        android:textSize="@dimen/labelLogin" />
    
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/gray"
        android:textSize="@dimen/time" />

    <Button
        android:id="@+id/playStop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_play"
        android:onClick="actions"
        android:tag="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_warning"
            android:textColor="@color/white"
            android:text="@string/reset"
            android:onClick="actions"
            android:tag="3" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_success"
            android:textColor="@color/white"
            android:text="@string/add"
            android:onClick="actions"
            android:tag="4" />
    </LinearLayout>

    <Spinner
        android:id="@+id/projects"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/rounded_input"
         />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_input"
        android:textColor="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/note" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="0.28"
            android:gravity="right|center_vertical"
            android:text="@string/billed"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray" />

        <CheckBox
            android:id="@+id/billed"
            android:layout_width="66.875dp"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_switch"
            android:button="@null" />
    </LinearLayout>

</LinearLayout>
