<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gray"
        android:textSize="@dimen/TitleSize"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
         />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/label"
        android:textSize="@dimen/labelLogin"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Username"
        android:lines="1"
        android:maxLength="80"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:text="username"
        android:textColor="@color/gray"
        android:textSize="@dimen/inputSizeLogin" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/label"
        android:textSize="@dimen/labelLogin" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/gray"
        android:textSize="@dimen/inputSizeLogin"
        android:maxLength="80"
        android:paddingLeft="15dp"
        android:inputType="textPassword"
        android:hint="Password"
        android:text="password"
         >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_success"
        android:textColor="@color/white"
        android:textSize="@dimen/inputSizeLogin"
        android:onClick="action" />

</LinearLayout>
